packages/scriptable/scriptable-0.1.1.tar.gz/scriptable-0.1.1/scriptable/antlr/TypescriptParser.py
# Generated from Typescript.g4 by ANTLR 4.9.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class TypescriptParser ( Parser ):

    grammarFileName = "Typescript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'.'", "':'", "','", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'**'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'&&'", "'||'", "'!'", 
                     "'=='", "'==='", "'!='", "'!=='", "'<'", "'<='", "'>'", 
                     "'>='", "'if'", "'else'", "'return'", "'function'", 
                     "'string'", "'number'", "'boolean'", "'=>'", "'while'", 
                     "'for'", "'in'", "'of'", "'const'", "'var'", "'let'", 
                     "'='", "'break'", "'continue'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "DOT", "COLON", "COMMA", 
                      "SEMICOLON", "PLUS", "MINUS", "MUL", "DIV", "POWER", 
                      "ROUND_LEFT", "ROUND_RIGHT", "CURLY_LEFT", "CURLY_RIGHT", 
                      "BRACKET_LEFT", "BRACKET_RIGHT", "AND", "OR", "NOT", 
                      "EQ", "STRICT_EQ", "NEQ", "STRICT_NEQ", "LT", "LE", 
                      "GT", "GE", "IF", "ELSE", "RETURN", "FUNCTION", "STRING", 
                      "NUMBER", "BOOLEAN", "ARROW", "WHILE", "FOR", "IN", 
                      "OF", "CONST", "VAR", "LET", "EQUAL", "BREAK", "CONTINUE", 
                      "IDENTIFIER", "CHARS", "DIGITS", "WS", "LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_sAll = 0
    RULE_sOperand = 1
    RULE_sOperator = 2
    RULE_sExpression = 3
    RULE_sTerm = 4
    RULE_sValue = 5
    RULE_sInvocation = 6
    RULE_sControl = 7
    RULE_sStatement = 8
    RULE_sPlus = 9
    RULE_sMinus = 10
    RULE_sMul = 11
    RULE_sDiv = 12
    RULE_sPower = 13
    RULE_sAnd = 14
    RULE_sOr = 15
    RULE_sNot = 16
    RULE_sEquals = 17
    RULE_sNotEquals = 18
    RULE_sLowerThan = 19
    RULE_sLowerEquals = 20
    RULE_sGreaterThan = 21
    RULE_sGreaterEquals = 22
    RULE_sArithmeticExpression = 23
    RULE_sArithmeticTerm = 24
    RULE_sBooleanOperand = 25
    RULE_sBooleanOperator = 26
    RULE_sBooleanExpression = 27
    RULE_sBooleanTerm = 28
    RULE_sNumberOperand = 29
    RULE_sNumberOperator = 30
    RULE_sNumberExpression = 31
    RULE_sNumberTerm = 32
    RULE_sStringOperand = 33
    RULE_sStringOperator = 34
    RULE_sStringExpression = 35
    RULE_sStringTerm = 36
    RULE_sConcatOperand = 37
    RULE_sConcatExpression = 38
    RULE_sConcatLeft = 39
    RULE_sConcatRight = 40
    RULE_sConcatBoth = 41
    RULE_sType = 42
    RULE_sFunction = 43
    RULE_sFunctionArg = 44
    RULE_sFunctionArgs = 45
    RULE_sFunctionArgDef = 46
    RULE_sFunctionArgDefs = 47
    RULE_sFunctionHead = 48
    RULE_sFunctionTail = 49
    RULE_sFunctionCall = 50
    RULE_sFunctionLambda = 51
    RULE_sProperty = 52
    RULE_sPropertyAware = 53
    RULE_sPropertyAccess = 54
    RULE_sFunctionAware = 55
    RULE_sFunctionAccess = 56
    RULE_sLine = 57
    RULE_sBody = 58
    RULE_sReturn = 59
    RULE_sIf = 60
    RULE_sElse = 61
    RULE_sElseIf = 62
    RULE_sString = 63
    RULE_sNumber = 64
    RULE_sBoolean = 65
    RULE_sArray = 66
    RULE_sMap = 67
    RULE_sEndlessLoop = 68
    RULE_sWhile = 69
    RULE_sFor = 70
    RULE_sForOf = 71
    RULE_sForIn = 72
    RULE_sLoopTail = 73
    RULE_sContinue = 74
    RULE_sBreak = 75
    RULE_sMutableVar = 76
    RULE_sImmutableVar = 77
    RULE_sAssignment = 78
    RULE_sIncrement = 79
    RULE_sDecrement = 80

    ruleNames =  [ "sAll", "sOperand", "sOperator", "sExpression", "sTerm", 
                   "sValue", "sInvocation", "sControl", "sStatement", "sPlus", 
                   "sMinus", "sMul", "sDiv", "sPower", "sAnd", "sOr", "sNot", 
                   "sEquals", "sNotEquals", "sLowerThan", "sLowerEquals", 
                   "sGreaterThan", "sGreaterEquals", "sArithmeticExpression", 
                   "sArithmeticTerm", "sBooleanOperand", "sBooleanOperator", 
                   "sBooleanExpression", "sBooleanTerm", "sNumberOperand", 
                   "sNumberOperator", "sNumberExpression", "sNumberTerm", 
                   "sStringOperand", "sStringOperator", "sStringExpression", 
                   "sStringTerm", "sConcatOperand", "sConcatExpression", 
                   "sConcatLeft", "sConcatRight", "sConcatBoth", "sType", 
                   "sFunction", "sFunctionArg", "sFunctionArgs", "sFunctionArgDef", 
                   "sFunctionArgDefs", "sFunctionHead", "sFunctionTail", 
                   "sFunctionCall", "sFunctionLambda", "sProperty", "sPropertyAware", 
                   "sPropertyAccess", "sFunctionAware", "sFunctionAccess", 
                   "sLine", "sBody", "sReturn", "sIf", "sElse", "sElseIf", 
                   "sString", "sNumber", "sBoolean", "sArray", "sMap", "sEndlessLoop", 
                   "sWhile", "sFor", "sForOf", "sForIn", "sLoopTail", "sContinue", 
                   "sBreak", "sMutableVar", "sImmutableVar", "sAssignment", 
                   "sIncrement", "sDecrement" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    DOT=3
    COLON=4
    COMMA=5
    SEMICOLON=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    POWER=11
    ROUND_LEFT=12
    ROUND_RIGHT=13
    CURLY_LEFT=14
    CURLY_RIGHT=15
    BRACKET_LEFT=16
    BRACKET_RIGHT=17
    AND=18
    OR=19
    NOT=20
    EQ=21
    STRICT_EQ=22
    NEQ=23
    STRICT_NEQ=24
    LT=25
    LE=26
    GT=27
    GE=28
    IF=29
    ELSE=30
    RETURN=31
    FUNCTION=32
    STRING=33
    NUMBER=34
    BOOLEAN=35
    ARROW=36
    WHILE=37
    FOR=38
    IN=39
    OF=40
    CONST=41
    VAR=42
    LET=43
    EQUAL=44
    BREAK=45
    CONTINUE=46
    IDENTIFIER=47
    CHARS=48
    DIGITS=49
    WS=50
    LINE_COMMENT=51
    WHITESPACE=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SAllContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TypescriptParser.EOF, 0)

        def sInvocation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SInvocationContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SInvocationContext,i)


        def sProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SPropertyContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SPropertyContext,i)


        def sExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SExpressionContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SExpressionContext,i)


        def sTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.STermContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.STermContext,i)


        def sValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SValueContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SValueContext,i)


        def sControl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SControlContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SControlContext,i)


        def sReturn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SReturnContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SReturnContext,i)


        def sFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SFunctionContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SFunctionContext,i)


        def sStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypescriptParser.SStatementContext)
            else:
                return self.getTypedRuleContext(TypescriptParser.SStatementContext,i)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sAll

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSAll" ):
                listener.enterSAll(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSAll" ):
                listener.exitSAll(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSAll" ):
                return visitor.visitSAll(self)
            else:
                return visitor.visitChildren(self)




    def sAll(self):

        localctx = TypescriptParser.SAllContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sAll)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TypescriptParser.TRUE) | (1 << TypescriptParser.FALSE) | (1 << TypescriptParser.ROUND_LEFT) | (1 << TypescriptParser.CURLY_LEFT) | (1 << TypescriptParser.BRACKET_LEFT) | (1 << TypescriptParser.IF) | (1 << TypescriptParser.RETURN) | (1 << TypescriptParser.FUNCTION) | (1 << TypescriptParser.WHILE) | (1 << TypescriptParser.FOR) | (1 << TypescriptParser.CONST) | (1 << TypescriptParser.VAR) | (1 << TypescriptParser.LET) | (1 << TypescriptParser.BREAK) | (1 << TypescriptParser.CONTINUE) | (1 << TypescriptParser.IDENTIFIER) | (1 << TypescriptParser.CHARS) | (1 << TypescriptParser.DIGITS))) != 0):
                self.state = 171
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 162
                    self.sInvocation()
                    pass

                elif la_ == 2:
                    self.state = 163
                    self.sProperty()
                    pass

                elif la_ == 3:
                    self.state = 164
                    self.sExpression()
                    pass

                elif la_ == 4:
                    self.state = 165
                    self.sTerm()
                    pass

                elif la_ == 5:
                    self.state = 166
                    self.sValue()
                    pass

                elif la_ == 6:
                    self.state = 167
                    self.sControl()
                    pass

                elif la_ == 7:
                    self.state = 168
                    self.sReturn()
                    pass

                elif la_ == 8:
                    self.state = 169
                    self.sFunction()
                    pass

                elif la_ == 9:
                    self.state = 170
                    self.sStatement()
                    pass


                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(TypescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sNumber(self):
            return self.getTypedRuleContext(TypescriptParser.SNumberContext,0)


        def sProperty(self):
            return self.getTypedRuleContext(TypescriptParser.SPropertyContext,0)


        def sInvocation(self):
            return self.getTypedRuleContext(TypescriptParser.SInvocationContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sOperand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSOperand" ):
                listener.enterSOperand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSOperand" ):
                listener.exitSOperand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSOperand" ):
                return visitor.visitSOperand(self)
            else:
                return visitor.visitChildren(self)




    def sOperand(self):

        localctx = TypescriptParser.SOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sOperand)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.sNumber()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.sProperty()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 180
                self.sInvocation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sPlus(self):
            return self.getTypedRuleContext(TypescriptParser.SPlusContext,0)


        def sMinus(self):
            return self.getTypedRuleContext(TypescriptParser.SMinusContext,0)


        def sMul(self):
            return self.getTypedRuleContext(TypescriptParser.SMulContext,0)


        def sDiv(self):
            return self.getTypedRuleContext(TypescriptParser.SDivContext,0)


        def sPower(self):
            return self.getTypedRuleContext(TypescriptParser.SPowerContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSOperator" ):
                listener.enterSOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSOperator" ):
                listener.exitSOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSOperator" ):
                return visitor.visitSOperator(self)
            else:
                return visitor.visitChildren(self)




    def sOperator(self):

        localctx = TypescriptParser.SOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sOperator)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypescriptParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.sPlus()
                pass
            elif token in [TypescriptParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.sMinus()
                pass
            elif token in [TypescriptParser.MUL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.sMul()
                pass
            elif token in [TypescriptParser.DIV]:
                self.enterOuterAlt(localctx, 4)
                self.state = 186
                self.sDiv()
                pass
            elif token in [TypescriptParser.POWER]:
                self.enterOuterAlt(localctx, 5)
                self.state = 187
                self.sPower()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sConcatExpression(self):
            return self.getTypedRuleContext(TypescriptParser.SConcatExpressionContext,0)


        def sArithmeticExpression(self):
            return self.getTypedRuleContext(TypescriptParser.SArithmeticExpressionContext,0)


        def sBooleanExpression(self):
            return self.getTypedRuleContext(TypescriptParser.SBooleanExpressionContext,0)


        def sNumberExpression(self):
            return self.getTypedRuleContext(TypescriptParser.SNumberExpressionContext,0)


        def sStringExpression(self):
            return self.getTypedRuleContext(TypescriptParser.SStringExpressionContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSExpression" ):
                listener.enterSExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSExpression" ):
                listener.exitSExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExpression" ):
                return visitor.visitSExpression(self)
            else:
                return visitor.visitChildren(self)




    def sExpression(self):

        localctx = TypescriptParser.SExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sExpression)
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.sConcatExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.sArithmeticExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 192
                self.sBooleanExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 193
                self.sNumberExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 194
                self.sStringExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class STermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sArithmeticTerm(self):
            return self.getTypedRuleContext(TypescriptParser.SArithmeticTermContext,0)


        def sBooleanTerm(self):
            return self.getTypedRuleContext(TypescriptParser.SBooleanTermContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTerm" ):
                listener.enterSTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTerm" ):
                listener.exitSTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSTerm" ):
                return visitor.visitSTerm(self)
            else:
                return visitor.visitChildren(self)




    def sTerm(self):

        localctx = TypescriptParser.STermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sTerm)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.sArithmeticTerm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 198
                self.sBooleanTerm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sNumber(self):
            return self.getTypedRuleContext(TypescriptParser.SNumberContext,0)


        def sBoolean(self):
            return self.getTypedRuleContext(TypescriptParser.SBooleanContext,0)


        def sString(self):
            return self.getTypedRuleContext(TypescriptParser.SStringContext,0)


        def sArray(self):
            return self.getTypedRuleContext(TypescriptParser.SArrayContext,0)


        def sMap(self):
            return self.getTypedRuleContext(TypescriptParser.SMapContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSValue" ):
                listener.enterSValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSValue" ):
                listener.exitSValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSValue" ):
                return visitor.visitSValue(self)
            else:
                return visitor.visitChildren(self)




    def sValue(self):

        localctx = TypescriptParser.SValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sValue)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypescriptParser.DIGITS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.sNumber()
                pass
            elif token in [TypescriptParser.TRUE, TypescriptParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.sBoolean()
                pass
            elif token in [TypescriptParser.CHARS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.sString()
                pass
            elif token in [TypescriptParser.BRACKET_LEFT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.sArray()
                pass
            elif token in [TypescriptParser.CURLY_LEFT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 205
                self.sMap()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SInvocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sPropertyAccess(self):
            return self.getTypedRuleContext(TypescriptParser.SPropertyAccessContext,0)


        def sFunctionAccess(self):
            return self.getTypedRuleContext(TypescriptParser.SFunctionAccessContext,0)


        def sFunctionCall(self):
            return self.getTypedRuleContext(TypescriptParser.SFunctionCallContext,0)


        def getRuleIndex(self):
            return TypescriptParser.RULE_sInvocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSInvocation" ):
                listener.enterSInvocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSInvocation" ):
                listener.exitSInvocation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSInvocation" ):
                return visitor.visitSInvocation(self)
            else:
                return visitor.visitChildren(self)




    def sInvocation(self):

        localctx = TypescriptParser.SInvocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sInvocation)
        try:
            self.state = 211
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.sPropertyAccess()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 209
                self.sFunctionAccess()
                pass

            elif la_ == 3:
